# memprof

./: .gitignore  CMakeLists.txt  main.cpp  memproflib.cpp  memproflib.h
gui/: gui_server.py
src/: main_demo_leak.cpp  main_demo_ok.cpp
src/memproflib/: Hooks.cpp  Hooks.h  SocketClient.cpp  SocketClient.h  SocketClienteTest.cpp  SocketClienteTest.h  Tracker.cpp  Tracker.h  Types.h
